# dp-superpixel

./: CMakeLists.txt  README.md  alpha.txt  dp-alpha-1.txt  dp-alpha-cp.txt  dp-alpha-dp-final.txt  dp-apenas.txt  dp-final.txt  dp-new.txt  dp.txt  dp2.txt  dp3.txt  dp4.txt  gd.seed  script.sh
app/example/: CMakeLists.txt
app/example/src/: Teste.cpp
app/img/: CMakeLists.txt
app/img/src/: main.cpp
lib/gco/: CMakeLists.txt
lib/gco/include/: GCoptimization.h  IcgBench.h  energy.h  graph.h  maxflow.h
lib/gco/src/: GCoptimization.cpp  IcgBench.cpp  energy.cpp  graph.cpp  maxflow.cpp
